# pytorch-transformer

./: .gitignore  README.md  attention_visual.ipynb  config.py  dataset.py  main.py  model.py  pyproject.toml  requirements.txt  train.py  train_wb.py  translate.py  ui.py
configs/: Chinese_modern_classical.json  opus_books.json  wmt19.json
scripts/: export_vocab_html.py
