[project]
name = "pytorch-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.1.0",
    "datasets>=4.8.5",
    "gradio>=5.0.0",
    "notebook>=7.5.6",
    "pandas>=3.0.3",
    "sacrebleu>=2.6.0",
    "tensorboard>=2.20.0",
    "tokenizers>=0.23.1",
    "torchmetrics>=1.9.0",
]
